2002-04-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: added language translation to the help menu via
	the babelfish website. The selection is translated and the result
	printed as a system message in the chat window.

2002-03-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (Debug): New debug menu item to load support for
	remote inspection using dde or comm for use with tkinspect.	
	* tkchat.tcl (addNewLines): Re-added the history size restriction.

2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: improved emoticon detection and simplified interface
	for defining new smileys.

2002-03-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added emoticon support

2002-03-06  Reinhard Max  <max@suse.de>

	* tkchat.tcl: preserving input widget contents when switching
	between single and multi line version. Fixed invocation of
	multiple browsers in gotoURL on UNIX.

2002-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: removed -timeout options for further testing. The
	timeout handling code remains but isn't called.
	Fixed a frink warning.

2002-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: do not save value of Options(URLlogs)

2002-02-15  Don Porter <dgp@users.sf.net>

	* tkchat.tcl: added check for required Tk 8.3.2 or better.

2002-02-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Try to cope with more possible HTTP errors in
	fetchPage, msgSend and onlinePage procs. Should always schedule
	another fetch.

2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: correct warnings that procheck noted.

2002-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: noise reduction from the last patch for timeout
	cases. Also added some menu navigation underlines.

2002-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added HTTP error checking to the history fetching