@@ -1,3 +1,9 @@
+2002-05-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl: don't add the festival hook by default - it can
+	lead to very surprising startup for those with festival installed
+	but who didn't request text-to-speech conversion.
+
 2002-04-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: added language translation to the help menu via
